[workspace]
resolver = "3"
members = [
    "aethernet",
    "aethernet-macros"
, "aethernet-macros-core", "test-expansion"]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2024"
authors = ["Matt Campbell <matt@farixembedded.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt"] }
redis = { version = "0.32.2", features = ["aio", "tokio-comp", "connection-manager"] }
async-trait = { version = "0.1.88" }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = { version = "1.0.140", features = [ "raw_value" ] }
uuid = { version = "1.17.0", features = [ "v4" ] }
trait-variant = "0.1.2"
log = "0.4.3"
